--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,17 +14,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-                <a class="logo" href="index.html">
+                <a class="logo" href="{{ site.baseurl }}/">
                   <img style="max-height: 150px" class="img-responsive" src="{{ site.baseurl }}/img/logo.png" alt="Logo">
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="{{ site.baseurl }}/">Home</a></li>
-                <li><a href="{{ site.baseurl }}/nutricao">Nutrição</a></li>
+                <li><a href="{{ site.baseurl }}/">A Nutricionista</a></li>
+                <li><a href="{{ site.baseurl }}/servicos">Serviços</a></li>
                 <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-                <li><a href="#">Service</a></li>
                 <li><a href="{{ site.baseurl }}/contato">Contato</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
