--- a/css/airspace.css
+++ b/css/airspace.css
@@ -3,7 +3,7 @@
  * In airspace, it is called style.css
  * However, style.css now holds additional styles for this jekyll port. (Not written by ThemeFisher)
  * The original style.css is now called airspace.css
- * 
+ *
  */
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
@@ -98,11 +98,24 @@ font header .navbar-default .navbar-nav li a:hover {
 --*/
 #slider {
   background: url("../img/slider-bg.jpg") no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: 10% 0%;
-  padding: 200px 0 280px 0;
+  padding: 200px 0 200px 0;*/
+  width: 100%;
+  display: block;
   position: relative;
+  overflow: visible;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #fff;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 #slider:before {
   content: "";
@@ -113,7 +126,7 @@ font header .navbar-default .navbar-nav li a:hover {
   right: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to left, #8b86a3, #322e40);
+  background: linear-gradient(to left, rgba(82, 84, 86, 0.30), rgba(82, 84, 86, 1));
   opacity: 0.8;
 }
 #slider .block {
@@ -123,9 +136,9 @@ font header .navbar-default .navbar-nav li a:hover {
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
   font-size: 45px;
-  line-height: 60px;
+  /*line-height: 60px;*/
   letter-spacing: 10px;
-  padding-bottom: 45px;
+  /*padding-bottom: 0px;*/
 }
 #slider .block p {
   font-size: 23px;
@@ -150,7 +163,7 @@ font header .navbar-default .navbar-nav li a:hover {
   padding-top: 20px;
 }
 #intro .block img {
-  padding-left: 40px;
+  /*padding-left: 40px;*/
   width: 100%;
 }
 #intro .section-title {
