--- a/css/airspace.css
+++ b/css/airspace.css
@@ -266,12 +266,13 @@ font header .navbar-default .navbar-nav li a:hover {
   padding: 100px 0;
 }
 #feature h2 {
+  color: #dcdcdd;
   font-size: 28px;
   font-weight: 600;
   margin-bottom: 30px;
 }
 #feature p {
-  color: #8d8f92;
+  color: #dcdcdd;
   margin-bottom: 20px;
 }
 #feature .btn-view-works {
