--- a/css/airspace.css
+++ b/css/airspace.css
@@ -151,12 +151,13 @@ font header .navbar-default .navbar-nav li a:hover {
 	wrapper Start
 --*/
 #intro {
-  padding: 100px 0;
+  /*padding: 100px 0;*/
 }
 #intro .block h2 {
   padding-top: 35px;
   line-height: 27px;
   margin: 0;
+
 }
 #intro .block p {
   color: #7B7B7B;
@@ -164,7 +165,12 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 #intro .block img {
   /*padding-left: 40px;*/
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  display: block;
+  margin: auto;
   width: 100%;
+  max-width: 400px;
 }
 #intro .section-title {
   margin-bottom: 0px;
