--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,8 +21,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="{{ site.baseurl }}/">A Nutricionista</a></li>
-                <li><a href="{{ site.baseurl }}/servicos">Serviços</a></li>
+                <li><a href="{{ site.baseurl }}#a-nutricionista">A Nutricionista</a></li>
+                <li><a href="#servicos">Serviços</a></li>
                 <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
                 <li><a href="{{ site.baseurl }}/contato">Contato</a></li>
               </ul>
