fix base url, added services

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,10 +21,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="{{ site.baseurl }}#a-nutricionista">A Nutricionista</a></li>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-                <li><a href="{{ site.baseurl }}/contato">Contato</a></li>
+                <li><a href="{{ site.url }}/#a-nutricionista">A Nutricionista</a></li>
+                <li><a href="{{ site.url }}/#servicos">Serviços</a></li>
+                <li><a href="{{ site.url }}/blog">Blog</a></li>
+                <li><a href="{{ site.url }}/contato">Contato</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
