--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,14 +5,12 @@
       <div class="col-md-12">
         <div class="footer-manu">
           <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="{{ site.baseurl }}/contato">Entre em Contato</a></li>
-            <li><a href="#">How it works</a></li>
-            <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-            <li><a href="#">Termos</a></li>
+            <li><a href="{{ site.url }}/#a-nutricionista">A Nutricionista</a></li>
+            <li><a href="{{ site.url }}/#servicos">Serviços</a></li>
+            <li><a href="{{ site.url }}/blog">Blog</a></li>
+            <li><a href="{{ site.url }}/contato">Entre em Contato</a></li>
           </ul>
         </div>
-        <p>Copyright &copy; Design &amp; Developed by <a href="http://www.themefisher.com">Themefisher</a>. All rights reserved.</p>
       </div>
     </div>
   </div>
