--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
+<meta name="description" content="Nutricionista em Belo Horizonte, Pampulha, doutoura em nutrição. Agende pelo email isis.nutri@gmail.com e telefone (31) 99256-6801">
+<meta name="keywords" content="nutrição, nutricionista, terapia nutricional, suplementação, nutrição clínica, nutrição renal, nutrição comportamental, nutricionista em BH, nutricionista em belo horizonte, nutricionista no castelo, emagrecimento, nutricionista na pampulha, nutricionista no são luiz, nutricionista em contagem, saúde, health, dietoterapia">
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
