updated contact form

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
             <li><a href="{{ site.url }}/#a-nutricionista">A Nutricionista</a></li>
             <li><a href="{{ site.url }}/#servicos">Serviços</a></li>
             <li><a href="{{ site.url }}/blog">Blog</a></li>
-            <li><a href="{{ site.url }}/contato">Entre em Contato</a></li>
+            <li><a href="{{ site.url }}/#contato">Contato</a></li>
           </ul>
         </div>
       </div>
