--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
                 <li><a href="{{ site.url }}/#a-nutricionista">A Nutricionista</a></li>
                 <li><a href="{{ site.url }}/#servicos">Serviços</a></li>
                 <li><a href="{{ site.url }}/blog">Blog</a></li>
-                <li><a href="{{ site.url }}/contato">Contato</a></li>
+                <li><a href="{{ site.url }}/#contato">Contato</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
