--- a/css/airspace.css
+++ b/css/airspace.css
@@ -203,7 +203,7 @@ font header .navbar-default .navbar-nav li a:hover {
 --*/
 #service {
   text-align: center;
-  padding: 90px 0;
+  padding: 20px 0;
 }
 #service .service-item {
   padding-bottom: 30px;
@@ -414,7 +414,7 @@ font header .navbar-default .navbar-nav li a:hover {
   right: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to left, #928dab, #1f1c2c 70%);
+  background: linear-gradient(to left, rgba(82, 84, 86, 0.30), rgba(82, 84, 86, 1));
   opacity: 0.8;
 }
 #global-header .block {
@@ -690,8 +690,8 @@ font header .navbar-default .navbar-nav li a:hover {
 	contact-form Start
 --*/
 #contact-form {
-  padding-top: 70px;
-  padding-bottom: 35px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 #contact-form .block form .form-group {
   padding-bottom: 15px;
